trying to fix viewport on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ html {
   max-width: 100vw;
   max-height: 100vh;
   overflow: hidden;
+  height: 100vh;
+  width: 100vw;
 
 }
 
